meu terceiro commit

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <HTML>
     <HEAD><TITLE>ATIVIDADE DE VERSIONAMENTO</TITLE></HEAD>
     <BODY>
-       <H1> titulo1 </H1>
+       <H1> git </H1>
     </BODY>
     </HTML>
      
